A few tweaks to home page, and some alignment issues

--- a/app/core/core.css
+++ b/app/core/core.css
@@ -32,6 +32,7 @@ body {
 
 .main-content {
   margin-top: 60px;
+  margin-bottom: 20px;
 }
 
 .navbar-inverse {
